# Clabs_mai

./: CMakeLists.txt  Hash_table.md  Lection_10.md  README.md  main.c
First_lab/: CMakeLists.txt  README.md  task1.c  task10.c  task2.c  task3.c  task4.c  task5.c  task6.c  task8.c  task9.c
First_lab/First_task/: CMakeLists.txt  main.c
First_lab/Second_task/: main.c
First_lab/Seventh_task/: main.c
First_task/: main.c
Firth_lab/: README.md
Lections_or_smth/: Lection_unknown.md  Seminar5.md  project_9.md  seminar_next.md
Second_lab/: README.md  l2_task1.c  l2_task2.c  l2_task4.c  l2_task5.c  l2_task6.c  l2_task7.c  l2_task8.c  l2_task9.c
Second_task/: main.c
Seventh_task/: main.c
Third_lab/: README.md  main7.c  task1.c  task2.c  task3.c  task4.c  task5.c  task7.c  task7.h
Third_lab/task5/: config.h  student.h  task5.c
Third_lab/task7/: main7.c  task7.c  task7.h
