cmake_minimum_required(VERSION 3.23)
project(Clabs C)

set(CMAKE_C_STANDARD 99)

add_executable(l2_task1
        Second_lab/l2_task1.c)

add_executable(l2_task2
        Second_lab/l2_task2.c)

add_executable(l2_task4
        Second_lab/l2_task4.c)

add_executable(l2_task5
        Second_lab/l2_task5.c)

add_executable(l2_task7
        Second_lab/l2_task7.c)

add_executable(l2_task8
        Second_lab/l2_task8.c)

add_executable(task2
        First_lab/task2.c)

add_executable(task1
        First_lab/task1.c)

add_executable(task3
        First_lab/task3.c)

add_executable(task4
        First_lab/task4.c)

add_executable(task5
        First_lab/task5.c)
#
add_executable(task6
        First_lab/task6.c)

add_executable(task7
        First_lab/task7.c)

add_executable(task8
        First_lab/task8.c)

add_executable(task9
        First_lab/task9.c)

#add_executable(Clabs First_lab/task10.c)

